--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "axios": "^0.21.0",
     "cors": "^2.8.5"
   },
   "devDependencies": {
