--- a/api/package.json
+++ b/api/package.json
@@ -8,6 +8,8 @@
     "cors": "^2.8.5",
     "fs": "0.0.1-security",
     "mysql": "^2.18.1",
+    "rss": "^1.2.2",
+    "rss-parser": "^3.10.0",
     "short-uuid": "^4.1.0",
     "uuid": "^8.3.2",
     "uuidv4": "^6.2.6",
