--- a/ui/package.json
+++ b/ui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ui",
   "version": "0.1.0",
-  "homepage": "https://cmp24.host.cs.st-andrews.ac.uk/ui/",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -15,7 +15,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "reactstrap": "^8.7.1"
+    "reactstrap": "^8.7.1",
+    "serve": "^11.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
